Complete homepage with hero, Kick Back section, feature cards, and service banner

--- a/.cursor-tasks.md
+++ b/.cursor-tasks.md
@@ -17,66 +17,188 @@ Go through each story and task in the .cursor-tasks.md file. Find the next story
 
 ---
 
-## 1. **Project Setup**
+---
 
-1. [ ] **Initialize the Next.js Project**
-   - Use Create Next App to bootstrap the project.
-   - Enable the App Router.
-   - Configure Tailwind CSS for styling.
-   - Set up TypeScript with strict mode.
-
-2. [ ] **Configure Basic Routing**
-   - Ensure the project has two main pages:
-     - **Home Page** (`pages/index.tsx`) for user input.
-     - **Greeting Page** (`pages/greeting.tsx`) to display the greeting.
+## 1. Global Components (Header, Footer, Shared Elements)
+1. [x] **Extract global assets**  
+   • Scrape logo, brand imagery, phone number, address text, and social-icon files from the live site.  
+2. [x] **Build header HTML**  
+   • Create a `<header>` with the Landshark logo and a semantic `<nav>` containing Home, Menu (with dropdown), Events, Accommodations, Gallery, Testimonials, Careers, Contact.  
+3. [x] **Apply header styling (CSS)**  
+   • Write styles for background, typography, spacing, hover states, and dropdown visibility on desktop.  
+4. [x] **Implement mobile nav toggle (JavaScript)**  
+   • Add a hamburger icon and JS to open/close the nav menu on small screens.  
+5. [x] **Build footer HTML**  
+   • Create a `<footer>` with "Reach Out" phone link, "Our Location" address, and social-media icon links.  
+6. [x] **Apply footer styling (CSS)**  
+   • Style footer background, text alignment, icon sizing, and padding.
 
 ---
 
-## 2. **Home Page – Name Input**
-
-1. [ ] **Create the Home Page (`pages/index.tsx`)**
-   - Render a form containing:
-     - A text input where the user enters their name.
-     - A submit button labeled "Submit".
-   - Use Tailwind CSS classes for styling (e.g., input borders, padding, and button colors).
-
-2. [ ] **Implement Form Handling**
-   - Use React’s `useState` hook to manage the input value.
-   - Validate that the input is not empty before submission.
-   - On form submission, navigate to the Greeting Page while passing the entered name (using query parameters or a simple state management solution).
-
----
-
-## 3. **Greeting Page – Display the Message**
-
-1. [ ] **Create the Greeting Page (`pages/greeting.tsx`)**
-   - Retrieve the user's name from the query parameters or via a shared state.
-   - Display a greeting message in the format: **"Hello, {name}"**.
-   - Style the greeting message using Tailwind CSS (e.g., text size, color, and margin).
-
-2. [ ] **Implement Navigation from Home Page**
-   - Ensure that the Home Page form submission correctly routes to the Greeting Page with the user’s name attached.
+## 2. Homepage (`index.html`)
+7. [x] **Extract homepage content**  
+   • Copy hero headline/subtext/button label, "Kick Back" section text, feature-card texts, and service blurb; download hero & feature images.  
+8. [x] **Recreate hero section (HTML)**  
+   • Mark up the full-width hero with background image, `<h1>` headline, `<p>` subtext, and a CTA button.  
+9. [x] **Style hero section (CSS)**  
+   • Implement full-width layout, overlay or text-shadow for readability, and styled button.  
+10. [x] **Add "Kick Back and Enjoy the Game" section (HTML)**  
+    • Insert `<h2>` and paragraph describing 25+ TVs & custom sound system alongside an image.  
+11. [x] **Style "Kick Back" section (CSS)**  
+    • Use a two-column flex/grid layout, set typography and spacing.  
+12. [x] **Create feature cards (HTML)**  
+    • Build three cards for Drink Menu, Food Menu, Tailgate Menu with icon/image, title, and "Learn More" link.  
+13. [x] **Style feature cards (CSS)**  
+    • Apply grid/flex layout, card borders, hover effects, responsive stacking on mobile.  
+14. [x] **Add "Outstanding Service" banner (HTML)**  
+    • Centered paragraph highlighting service excellence.  
+15. [x] **Style service banner (CSS)**  
+    • Give it a distinct background or typographic treatment.  
+16. [x] **Homepage review & QA**  
+    • Verify structure, typography, images, and responsiveness; tweak as needed.
 
 ---
 
-## 4. **Basic Interactivity and Validation**
+## 3. Menu Pages
+### 3.1. Drink Menu (`drink-menu.html`)
+17. [ ] **Extract drink-menu content**  
+    • Scrape drink categories & items (Shark Bowls, Cocktails, Shots, Beers, etc.) and any drink imagery.  
+18. [ ] **Build drink menu page (HTML)**  
+    • Mark up headings for each category and list items with names & descriptions.  
+19. [ ] **Style drink menu (CSS)**  
+    • Format categories & lists, set columns or spacing for readability.
 
-1. [ ] **Form Validation**
-   - Prevent submission if the text input is empty.
-   - Display a simple error message below the input (e.g., "Please enter your name.") when validation fails.
+### 3.2. Food Menu (`food-menu.html`)
+20. [ ] **Extract food-menu content**  
+    • Copy food categories (appetizers, burgers, pizzas, etc.) and item details.  
+21. [ ] **Build food menu page (HTML)**  
+    • Structure headings and lists for each food category.  
+22. [ ] **Style food menu (CSS)**  
+    • Apply consistent menu styling, responsive columns if needed.
 
-2. [ ] **Test the User Flow**
-   - Manually test by entering a name and verifying that the Greeting Page shows the correct message.
-   - Optionally, write unit tests for the form logic to ensure reliability.
+### 3.3. Tailgate Menu (`tailgate-menu.html`)
+23. [ ] **Extract tailgate-menu content**  
+    • Pull special tailgate packages, pricing, descriptions.  
+24. [ ] **Build tailgate menu page (HTML)**  
+    • Structure as sections or tables with package details.  
+25. [ ] **Style tailgate menu (CSS)**  
+    • Match other menus, ensure readability on mobile.
+
+26. [ ] **Update nav links for Menu dropdown**  
+    • Point "Drink Menu", "Food Menu", "Tailgate Menu" to their respective pages.  
+27. [ ] **Menu pages QA**  
+    • Check that all items appear correctly, links work, and layouts are responsive.
 
 ---
 
-## 5. **Documentation and Final Steps**
+## 4. Events Page (`events.html`)
+28. [ ] **Extract events content**  
+    • Copy the "Host your next event…" heading, private-events bullet list, call-to-action, weekly schedule, any embeds/images.  
+29. [ ] **Build events page structure (HTML)**  
+    • Mark up heading, private-events `<ul>`, CTA button, and weekly events list by day.  
+30. [ ] **Embed social content (optional)**  
+    • Include Instagram embed code or static placeholders under Sunday/Tuesday.  
+31. [ ] **Style events page (CSS)**  
+    • Format bullets, day headings, two-column or list layout, button styling.  
+32. [ ] **Events page QA**  
+    • Verify content, CTA link, responsiveness, and any embeds.
 
-1. [ ] **Update the Project README**
-   - Include instructions on how to install dependencies, run the development server, and build the project.
-   - Provide a brief overview of the project’s purpose and structure.
+---
 
-2. [ ] **Final Review and Testing**
-   - Ensure that all components render correctly and the navigation works as expected.
-   - Test the app in both development and production modes to confirm proper behavior.
+## 5. Accommodations Page (`accommodations.html`)
+33. [ ] **Extract accommodations content**  
+    • Copy heading/subheading, bullet list of group options, reservation paragraph, download images.  
+34. [ ] **Build accommodations page (HTML)**  
+    • Mark up heading, `<ul>` features list, reservation call-out `<h3>` + paragraph.  
+35. [ ] **Insert images**  
+    • Add relevant image(s) with descriptive `alt` text.  
+36. [ ] **Style accommodations page (CSS)**  
+    • Style bullets (with icons), headings, and image placement.  
+37. [ ] **Responsive check**  
+    • Ensure list & image stack properly on small screens.  
+38. [ ] **Accommodations QA**  
+    • Confirm content accuracy, layout, and link functionality (LineLeap or contact).
+
+---
+
+## 6. Gallery Page (`gallery.html`)
+39. [ ] **Gather gallery assets**  
+    • Download all gallery photos and note any captions.  
+40. [ ] **Build gallery page structure (HTML)**  
+    • Create carousel container with `.slide` items and prev/next controls.  
+41. [ ] **Implement carousel JS**  
+    • Write script to cycle slides, handle wrap-around, and update active classes.  
+42. [ ] **Style gallery/carousel (CSS)**  
+    • Size container, position arrows, style dot indicators (if used), responsive scaling.  
+43. [ ] **Add fallback grid (optional)**  
+    • Build a responsive thumbnail grid for non-JS fallback.  
+44. [ ] **Gallery page QA**  
+    • Test slide navigation, loop behavior, and mobile responsiveness.
+
+---
+
+## 7. Testimonials Page (`testimonials.html`)
+45. [ ] **Extract testimonials content**  
+    • Copy all client quotes & names.  
+46. [ ] **Build testimonials page (HTML)**  
+    • Mark up each testimonial with `<blockquote>` or `<p>` + `<strong>` name.  
+47. [ ] **Style testimonials (CSS)**  
+    • Center headings, italicize quotes, bold names, add spacing or borders.  
+48. [ ] **Add testimonial carousel (optional)**  
+    • Write JS to rotate quotes or add prev/next controls.  
+49. [ ] **Responsive check**  
+    • Ensure quotes wrap and size correctly on mobile.  
+50. [ ] **Testimonials QA**  
+    • Verify all entries display, styling consistency, and carousel (if any).
+
+---
+
+## 8. Careers Page (`careers.html`)
+51. [ ] **Extract careers content**  
+    • Copy "Now Hiring" positions list, instructions, and PDF link.  
+52. [ ] **Build careers page (HTML)**  
+    • Mark up heading, positions list, subheading "Apply Now!", and download link/button.  
+53. [ ] **Link application PDF**  
+    • Point the button to the hosted PDF file.  
+54. [ ] **Insert any page images**  
+    • Add hiring-related image or icon with `alt` text.  
+55. [ ] **Style careers page (CSS)**  
+    • Highlight roles heading, style button, and format text.  
+56. [ ] **Careers page QA**  
+    • Test PDF link, email link (mailto:), and layout.
+
+---
+
+## 9. Contact Page (`contact.html`)
+57. [ ] **Extract contact content**  
+    • Copy page heading, intro text, form labels/placeholders, success & error messages, hours, address, phone.  
+58. [ ] **Build contact form (HTML)**  
+    • Create `<form>` with fields for First Name, Last Name, Email, Phone, Message, and a Submit button.  
+59. [ ] **Add contact info & hours section**  
+    • List business hours by day, phone, address, and optional map embed/iframe.  
+60. [ ] **Style contact page (CSS)**  
+    • Two-column layout (form + info), style inputs, button, messages.  
+61. [ ] **Implement form submission handling (JS)**  
+    • Simulate submission: prevent default, validate fields, show success or error message.  
+62. [ ] **Embed map (optional)**  
+    • Insert Google Maps iframe or static map image.  
+63. [ ] **Contact page QA**  
+    • Test validation, success/error flows, and link functionality.
+
+---
+
+## 10. Final Integration & Deployment
+64. [ ] **Cross-page link check**  
+    • Verify every nav/footer link and CTA points to the correct HTML file.  
+65. [ ] **Consistency pass**  
+    • Ensure fonts, colors, button styles, and spacing are uniform site-wide.  
+66. [ ] **Responsive design testing**  
+    • Test all pages at desktop/tablet/mobile breakpoints; tweak media queries as needed.  
+67. [ ] **Interactive functionality test**  
+    • Verify mobile nav toggle, all carousels, and form JS behave without console errors.  
+68. [ ] **Performance & image optimization (optional)**  
+    • Compress images, implement `srcset`, and minimize CSS/JS for faster load.  
+69. [ ] **Deploy/package website**  
+    • Organize files (HTML, `/css/styles.css`, `/js/main.js`, `/images/`), fix relative paths, and open `index.html` to confirm everything loads.  
+70. [ ] **Final QA & sign-off**  
+    • Do a complete walkthrough as an end user, checking visuals, links, and interactions before project completion.
