Complete menu pages - drink menu, food menu, and tailgate menu

--- a/.cursor-tasks.md
+++ b/.cursor-tasks.md
@@ -61,32 +61,32 @@ Go through each story and task in the .cursor-tasks.md file. Find the next story
 
 ## 3. Menu Pages
 ### 3.1. Drink Menu (`drink-menu.html`)
-17. [ ] **Extract drink-menu content**  
+17. [x] **Extract drink-menu content**  
     • Scrape drink categories & items (Shark Bowls, Cocktails, Shots, Beers, etc.) and any drink imagery.  
-18. [ ] **Build drink menu page (HTML)**  
+18. [x] **Build drink menu page (HTML)**  
     • Mark up headings for each category and list items with names & descriptions.  
-19. [ ] **Style drink menu (CSS)**  
+19. [x] **Style drink menu (CSS)**  
     • Format categories & lists, set columns or spacing for readability.
 
 ### 3.2. Food Menu (`food-menu.html`)
-20. [ ] **Extract food-menu content**  
+20. [x] **Extract food-menu content**  
     • Copy food categories (appetizers, burgers, pizzas, etc.) and item details.  
-21. [ ] **Build food menu page (HTML)**  
+21. [x] **Build food menu page (HTML)**  
     • Structure headings and lists for each food category.  
-22. [ ] **Style food menu (CSS)**  
+22. [x] **Style food menu (CSS)**  
     • Apply consistent menu styling, responsive columns if needed.
 
 ### 3.3. Tailgate Menu (`tailgate-menu.html`)
-23. [ ] **Extract tailgate-menu content**  
+23. [x] **Extract tailgate-menu content**  
     • Pull special tailgate packages, pricing, descriptions.  
-24. [ ] **Build tailgate menu page (HTML)**  
+24. [x] **Build tailgate menu page (HTML)**  
     • Structure as sections or tables with package details.  
-25. [ ] **Style tailgate menu (CSS)**  
+25. [x] **Style tailgate menu (CSS)**  
     • Match other menus, ensure readability on mobile.
 
-26. [ ] **Update nav links for Menu dropdown**  
+26. [x] **Update nav links for Menu dropdown**  
     • Point "Drink Menu", "Food Menu", "Tailgate Menu" to their respective pages.  
-27. [ ] **Menu pages QA**  
+27. [x] **Menu pages QA**  
     • Check that all items appear correctly, links work, and layouts are responsive.
 
 ---
