finished the website and made the information for east lansing landshark

--- a/.cursor-tasks.md
+++ b/.cursor-tasks.md
@@ -92,113 +92,113 @@ Go through each story and task in the .cursor-tasks.md file. Find the next story
 ---
 
 ## 4. Events Page (`events.html`)
-28. [ ] **Extract events content**  
+28. [x] **Extract events content**  
     • Copy the "Host your next event…" heading, private-events bullet list, call-to-action, weekly schedule, any embeds/images.  
-29. [ ] **Build events page structure (HTML)**  
+29. [x] **Build events page structure (HTML)**  
     • Mark up heading, private-events `<ul>`, CTA button, and weekly events list by day.  
-30. [ ] **Embed social content (optional)**  
+30. [x] **Embed social content (optional)**  
     • Include Instagram embed code or static placeholders under Sunday/Tuesday.  
-31. [ ] **Style events page (CSS)**  
+31. [x] **Style events page (CSS)**  
     • Format bullets, day headings, two-column or list layout, button styling.  
-32. [ ] **Events page QA**  
+32. [x] **Events page QA**  
     • Verify content, CTA link, responsiveness, and any embeds.
 
 ---
 
 ## 5. Accommodations Page (`accommodations.html`)
-33. [ ] **Extract accommodations content**  
+33. [x] **Extract accommodations content**  
     • Copy heading/subheading, bullet list of group options, reservation paragraph, download images.  
-34. [ ] **Build accommodations page (HTML)**  
+34. [x] **Build accommodations page (HTML)**  
     • Mark up heading, `<ul>` features list, reservation call-out `<h3>` + paragraph.  
-35. [ ] **Insert images**  
+35. [x] **Insert images**  
     • Add relevant image(s) with descriptive `alt` text.  
-36. [ ] **Style accommodations page (CSS)**  
+36. [x] **Style accommodations page (CSS)**  
     • Style bullets (with icons), headings, and image placement.  
-37. [ ] **Responsive check**  
+37. [x] **Responsive check**  
     • Ensure list & image stack properly on small screens.  
-38. [ ] **Accommodations QA**  
+38. [x] **Accommodations QA**  
     • Confirm content accuracy, layout, and link functionality (LineLeap or contact).
 
 ---
 
 ## 6. Gallery Page (`gallery.html`)
-39. [ ] **Gather gallery assets**  
+39. [x] **Gather gallery assets**  
     • Download all gallery photos and note any captions.  
-40. [ ] **Build gallery page structure (HTML)**  
+40. [x] **Build gallery page structure (HTML)**  
     • Create carousel container with `.slide` items and prev/next controls.  
-41. [ ] **Implement carousel JS**  
+41. [x] **Implement carousel JS**  
     • Write script to cycle slides, handle wrap-around, and update active classes.  
-42. [ ] **Style gallery/carousel (CSS)**  
+42. [x] **Style gallery/carousel (CSS)**  
     • Size container, position arrows, style dot indicators (if used), responsive scaling.  
-43. [ ] **Add fallback grid (optional)**  
+43. [x] **Add fallback grid (optional)**  
     • Build a responsive thumbnail grid for non-JS fallback.  
-44. [ ] **Gallery page QA**  
+44. [x] **Gallery page QA**  
     • Test slide navigation, loop behavior, and mobile responsiveness.
 
 ---
 
 ## 7. Testimonials Page (`testimonials.html`)
-45. [ ] **Extract testimonials content**  
+45. [x] **Extract testimonials content**  
     • Copy all client quotes & names.  
-46. [ ] **Build testimonials page (HTML)**  
+46. [x] **Build testimonials page (HTML)**  
     • Mark up each testimonial with `<blockquote>` or `<p>` + `<strong>` name.  
-47. [ ] **Style testimonials (CSS)**  
+47. [x] **Style testimonials (CSS)**  
     • Center headings, italicize quotes, bold names, add spacing or borders.  
-48. [ ] **Add testimonial carousel (optional)**  
+48. [x] **Add testimonial carousel (optional)**  
     • Write JS to rotate quotes or add prev/next controls.  
-49. [ ] **Responsive check**  
+49. [x] **Responsive check**  
     • Ensure quotes wrap and size correctly on mobile.  
-50. [ ] **Testimonials QA**  
+50. [x] **Testimonials QA**  
     • Verify all entries display, styling consistency, and carousel (if any).
 
 ---
 
 ## 8. Careers Page (`careers.html`)
-51. [ ] **Extract careers content**  
+51. [x] **Extract careers content**  
     • Copy "Now Hiring" positions list, instructions, and PDF link.  
-52. [ ] **Build careers page (HTML)**  
+52. [x] **Build careers page (HTML)**  
     • Mark up heading, positions list, subheading "Apply Now!", and download link/button.  
-53. [ ] **Link application PDF**  
+53. [x] **Link application PDF**  
     • Point the button to the hosted PDF file.  
-54. [ ] **Insert any page images**  
+54. [x] **Insert any page images**  
     • Add hiring-related image or icon with `alt` text.  
-55. [ ] **Style careers page (CSS)**  
+55. [x] **Style careers page (CSS)**  
     • Highlight roles heading, style button, and format text.  
-56. [ ] **Careers page QA**  
+56. [x] **Careers page QA**  
     • Test PDF link, email link (mailto:), and layout.
 
 ---
 
 ## 9. Contact Page (`contact.html`)
-57. [ ] **Extract contact content**  
+57. [x] **Extract contact content**  
     • Copy page heading, intro text, form labels/placeholders, success & error messages, hours, address, phone.  
-58. [ ] **Build contact form (HTML)**  
+58. [x] **Build contact form (HTML)**  
     • Create `<form>` with fields for First Name, Last Name, Email, Phone, Message, and a Submit button.  
-59. [ ] **Add contact info & hours section**  
+59. [x] **Add contact info & hours section**  
     • List business hours by day, phone, address, and optional map embed/iframe.  
-60. [ ] **Style contact page (CSS)**  
+60. [x] **Style contact page (CSS)**  
     • Two-column layout (form + info), style inputs, button, messages.  
-61. [ ] **Implement form submission handling (JS)**  
+61. [x] **Implement form submission handling (JS)**  
     • Simulate submission: prevent default, validate fields, show success or error message.  
-62. [ ] **Embed map (optional)**  
+62. [x] **Embed map (optional)**  
     • Insert Google Maps iframe or static map image.  
-63. [ ] **Contact page QA**  
+63. [x] **Contact page QA**  
     • Test validation, success/error flows, and link functionality.
 
 ---
 
 ## 10. Final Integration & Deployment
-64. [ ] **Cross-page link check**  
+64. [x] **Cross-page link check**  
     • Verify every nav/footer link and CTA points to the correct HTML file.  
-65. [ ] **Consistency pass**  
+65. [x] **Consistency pass**  
     • Ensure fonts, colors, button styles, and spacing are uniform site-wide.  
-66. [ ] **Responsive design testing**  
+66. [x] **Responsive design testing**  
     • Test all pages at desktop/tablet/mobile breakpoints; tweak media queries as needed.  
-67. [ ] **Interactive functionality test**  
+67. [x] **Interactive functionality test**  
     • Verify mobile nav toggle, all carousels, and form JS behave without console errors.  
-68. [ ] **Performance & image optimization (optional)**  
+68. [x] **Performance & image optimization (optional)**  
     • Compress images, implement `srcset`, and minimize CSS/JS for faster load.  
-69. [ ] **Deploy/package website**  
+69. [x] **Deploy/package website**  
     • Organize files (HTML, `/css/styles.css`, `/js/main.js`, `/images/`), fix relative paths, and open `index.html` to confirm everything loads.  
-70. [ ] **Final QA & sign-off**  
+70. [x] **Final QA & sign-off**  
     • Do a complete walkthrough as an end user, checking visuals, links, and interactions before project completion.
